fix for 'overflow-y not working #90'

--- a/web/app/assets/stylesheets/foundation_overrides.scss
+++ b/web/app/assets/stylesheets/foundation_overrides.scss
@@ -1,7 +1,3 @@
-.grid-block {
-  overflow: visible;
-}
-
 .title-bar.primary {
   padding: 0;
 
