--- a/web/app/components/Exchange/exchange.scss
+++ b/web/app/components/Exchange/exchange.scss
@@ -135,19 +135,18 @@ p.order-table-title {
   position: relative;
 }
 
+.spread {
+  height: 2rem;
+}
 
 .fixed-height {
   .headers {
     height: 5vh;
   }
 
-  .spread {
-    height: 5vh;
-  }
-
   .orderbook-top {
     display: inline-block;
-    height: 38vh;
+    height: 41vh;
     overflow-y: auto;
     bottom: 0;
     position: relative;
@@ -155,7 +154,7 @@ p.order-table-title {
 
   .orderbook-bottom {
     display: inline-block;
-    height: 50vh;
+    height: 42vh;
     overflow-y: auto;
     top: 0;
     position: relative;
@@ -172,7 +171,7 @@ p.order-table-title {
 .bid-total {
   font-size: 90%;
   position: absolute;
-  top: 40px;
+  top: 41px;
   left: 25px;
   color: $bid-color;
 }
